# gqlrocket

./: Cargo.toml  Help.txt
src/: main.rs
src/resolvers/: mod.rs  mutation.rs  query.rs
src/schema/: Crud.graphql  mod.rs  typedefs.rs
