[package]
name = "gqlrocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.1"
async-graphql = "7.0.7"
async-graphql-rocket = "7.0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }


